Used static Org id

--- a/ElectronicGovernment.API/ElectronicGovernment.API.csproj
+++ b/ElectronicGovernment.API/ElectronicGovernment.API.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\ElectronicGovernment.DTO\ElectronicGovernment.DTO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
